cmake_minimum_required(VERSION 3.20)
project(libs_xampl)


# target_link_directories(add PRIVATE ${CMAKE_SOURCE_DIR}/src/add)
# target_link_libraries(adder add)
# include_directories(${CMAKE_SOURCE_DIR}/src)
# include_directories(${CMAKE_SOURCE_DIR}/src/add)
# include_directories(${CMAKE_SOURCE_DIR}/src/divide)

add_subdirectory(src)

